--- a/custom.css
+++ b/custom.css
@@ -95,8 +95,7 @@ img[src$='#pe32']
     font-size: 0.8em;
   }
 
-  table td,
-  table th {
+   td, th {
     padding-top: 8px;
     padding-bottom: 8px;
     padding-left: 16px;
