fixed table width

--- a/static/custom.css
+++ b/static/custom.css
@@ -108,3 +108,17 @@ th {
   padding-left: 16px;
   padding-right: 16px;
 }
+
+.table-wrapper {
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+  margin-bottom: 1em;
+}
+
+.table-wrapper table {
+  width: 100%;
+  max-width: 100%;
+  border-collapse: collapse;
+  table-layout: auto;
+  word-wrap: break-word;
+}
