--- a/custom.css
+++ b/custom.css
@@ -109,16 +109,13 @@ th {
   padding-right: 16px;
 }
 
-.table-wrapper {
+table {
+  display: block;
+  width: 100%;
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
-  margin-bottom: 1em;
-}
-
-.table-wrapper table {
-  width: 100%;
   max-width: 100%;
+  white-space: nowrap;
+  margin-bottom: 1em;
   border-collapse: collapse;
-  table-layout: auto;
-  word-wrap: break-word;
 }
